changed class names for things to be file specific

--- a/Login/login.html
+++ b/Login/login.html
@@ -32,7 +32,7 @@
     <main>
         <section>
             <div class="main-container">
-                <div class="forgot-img">
+                <div class="login-img">
                     <img src="signin.svg" alt="an illustration of a man holding a large key in front of a large screen">
                 </div>
                 <div class="form-wrapper">
@@ -61,12 +61,12 @@
                                 <input type="checkbox" name="terms" id="terms">
                                 <label for="terms">Remember me</label>
                             </div>
-                            <p class="forgot-link"><a href="../forgot.html">Forgot password?</a></p>
+                            <p class="signin-link"><a href="../forgot.html">Forgot password?</a></p>
                         </div>
                         <input type="submit" value="Sign Up">
                     </form>
                     <h4>Or Sign In With</h4>
-                    <div class="signup-with">
+                    <div class="signin-with">
                             <button><img src="../Signup/google.svg" alt="google logo"> Google</button>
                             <button><img src="../Signup/apple.svg" alt="apple logo"> Apple</button>
                     </div>
