--- a/Reset/reset.html
+++ b/Reset/reset.html
@@ -28,7 +28,7 @@
     <main>
         <section>
             <div class="main-container">
-                <div class="forgot-img">
+                <div class="reset-img">
                     <img src="reset.svg" alt="an illustration of a man using his phone">
                 </div>
                 <div class="form-wrapper">
@@ -46,7 +46,7 @@
                         <input type="password" name="password" id="password" placeholder="*******">
                         <input type="submit" value="Create Passsword">
                     </form>
-                    <a class="login-link" href="#">Back to Login</a>
+                    <a class="login-link" href="../Login/login.html">Back to Login</a>
                 </div>
             </div>
         </section>
