--- a/Signup/signup.html
+++ b/Signup/signup.html
@@ -32,7 +32,7 @@
     <main>
         <section>
             <div class="main-container">
-                <div class="forgot-img">
+                <div class="signup-img">
                     <img src="signup.svg" alt="an illustration of a woman tapping on a large screen">
                 </div>
                 <div class="form-wrapper">
@@ -69,7 +69,7 @@
                         </div>
                         <div class="terms">
                             <input type="checkbox" name="terms" id="terms">
-                            <label for="terms">I Agree to all the <a class="" href="#">Terms and Conditions</a></label>
+                            <label for="terms">I Agree to all the <a href="#">Terms and Conditions</a></label>
                         </div>
                         <input type="submit" value="Sign Up">
                     </form>
@@ -78,7 +78,7 @@
                             <button><img src="google.svg" alt="apple logo"> Google</button>
                             <button><img src="apple.svg" alt="apple logo"> Apple</button>
                     </div>
-                    <p class="signin-text">Already have an account? <a class="signin-text-link" href="../Login/login.html">Sign In</a></p>
+                    <p class="signup-text">Already have an account? <a class="signup-text-link" href="../Login/login.html">Sign In</a></p>
                 </div>
             </div>
         </section>
