--- a/Reset/reset.html
+++ b/Reset/reset.html
@@ -17,8 +17,8 @@
         <div class="container">
             <div class="flex">
                 <div class="logo">
-                    <a href="index.html">
-                        <img src="images/logo.png" alt="Logo">
+                    <a href="../index.html">
+                        <img src="../images/logo.svg" alt="Logo">
                     </a>
                 </div>
                 <div></div>
@@ -44,6 +44,14 @@
                                 alt="an icon of an eye with a slash on it">
                         </label>
                         <input type="password" name="password" id="password" placeholder="*******">
+                        <p class="error-message">
+                            <span class="error-icon">
+                                <img src="../x-icon.svg" alt="an x icon">
+                            </span>
+                            <span class="error-text">
+                                Provide a valid email address
+                            </span>
+                        </p>
                         <input type="submit" value="Create Passsword">
                     </form>
                     <a class="login-link" href="../Login/login.html">Back to Login</a>
