--- a/index.html
+++ b/index.html
@@ -5,30 +5,392 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome</title>
-    <style>
-        main {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: #f5f5f5;
-            width: 100%;
-            height: 100vh;
-        }
-
-        a {
-            text-decoration: none;
-            color: teal;
-            display: block;
-            font-size: 3rem;
-        }
-    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="main.css">
+    <title>TermBuddy | Homepage</title>
 </head>
 
 <body>
+    <header>
+        <div class="container">
+            <div class="logo">
+                <a href="index.html">
+                    <img src="./images/logo.svg" alt="TermBuddy Logo">
+                </a>
+            </div>
+            <nav>
+                <button class="close"><img src="" alt="a close icon"></button>
+                <ul>
+                    <li><a href="index.html">product</a></li>
+                    <li><a href="about.html">templates</a></li>
+                    <li><a href="contact.html">about us</a></li>
+                    <li><a href="contact.html">contact us</a></li>
+                    <li><a href="contact.html">docs</a></li>
+                </ul>
+            </nav>
+            <div class="auth-links">
+                <a href="./Login/login.html">sign in</a>
+                <a href="./Signup/signup.html">sign up</a>
+            </div>
+            <div class="hamburger">
+                <img src="" alt="a hamburger menu icon">
+            </div>
+        </div>
+    </header>
+
     <main>
-        <a href="./Signup/signup.html">Click here for the good stuff</a>
+        <section>
+            <div class="container">
+                <div class="hero">
+                    <div class="hero-text">
+                        <h1>Whatever Legal Document you need? Your Termbuddy has got it!</h1>
+                        <p>We help users create and Terms & Conditions and Privacy Policy documents for their websites,
+                            mobile apps, businesses, third party services and many more
+                            with ease.</p>
+                        <div class="auth-links">
+                            <a href="">learn more</a>
+                            <a href="./Signup/signup.html">get started</a>
+                        </div>
+                    </div>
+                    <div class="hero-img">
+                        <img src="./images/hero.svg" alt="a document icon filled desktop display">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="teal">
+            <div class="container">
+                <div class="stats-wrapper">
+                    <div class="stat">
+                        <h3>10,000+</h3>
+                        <p>Customers</p>
+                    </div>
+                    <div class="stat">
+                        <h3>50+</h3>
+                        <p>Partners</p>
+                    </div>
+                    <div class="stat">
+                        <h3>200+</h3>
+                        <p>Lawyers</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="container flow">
+                <div class="column-wrapper">
+                    <div class="column-img">
+                        <img src="./images/export.svg"
+                            alt="an illustration of a man demonstrating file downnload and export">
+                    </div>
+                    <div class="column-text">
+                        <h2>Export, Download, Share
+                            and Embed Links with
+                            Ease</h2>
+                        <p>
+                            With Project 71, exporting, downlaoding, sharing and embedding
+                            of your terms & conditions and your privacy policy documents can
+                            be done quickly from wherever you are.
+                            Download them to whatever device your want with the click of a
+                            single button
+                        </p>
+                        <a href="./Login/login.html">get started <span><img src="./images/arrow-right.svg"
+                                    alt="a right arrow icon"></span></a>
+                    </div>
+                </div>
+
+                <div class="divider">
+                    <img src="./images/divider.svg" alt="a divider">
+                </div>
+
+                <div class="column-wrapper">
+                    <div class="column-text">
+                        <h2>Autosave your progress
+                            and resume your work
+                            anytime</h2>
+                        <p>
+                            Need to step away for a while? No problem! With our autosave
+                            feature, your work is automatically backed up after every edit,
+                            so you're never at a loss.
+                        </p>
+                        <a href="./Login/login.html">get started <span><img src="./images/arrow-right.svg"
+                                    alt="a right arrow icon"></span></a>
+                    </div>
+                    <div class="column-img">
+                        <img src="./images/auto-save.svg" alt="an illustration of a man demonstrating file autosave">
+                    </div>
+                </div>
+
+                <div class="divider">
+                    <img src="./images/divider.svg" alt="a divider">
+                </div>
+
+                <div class="column-wrapper">
+                    <div class="column-img">
+                        <img src="./images/multiple.svg"
+                            alt="an illustration of a man demonstrating multiple file creation">
+                    </div>
+                    <div class="column-text">
+                        <h2>Access to Multiple
+                            Templates</h2>
+                        <p>
+                            Choose from our unique set of easy-to-use templates, to create
+                            terms and conditions and privacy policies for your website, app,
+                            or e-commerce.
+                            The template can also be modified and reused
+                        </p>
+                        <a href="./Login/login.html">get started <span><img src="./images/arrow-right.svg"
+                                    alt="a right arrow icon"></span></a>
+                    </div>
+                </div>
+                <div class="partners">
+                    <h3>Partners</h3>
+                    <div class="partners-column">
+                        <div class="partner">
+                            <img src="./images/i4g-Logo.png" alt="i4g zuri logo">
+                        </div>
+                        <div class="partner">
+                            <img src="./images/zuri-team.png" alt="zuri team logo">
+                        </div>
+                        <div class="partner">
+                            <img src="./images/zuri-internship.png" alt="zuri internship logo">
+                        </div>
+                        <div class="partner">
+                            <img src="./images/zuri-training.png" alt="zuri training logo">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="teal">
+            <div class="container testimonials">
+                <h3>Testimonials</h3>
+                <div class="testimony-cards-wrapper">
+                    <div class="testimony-card">
+                        <div class="testimony-avatar">
+                            <img src="./images/avatar-1.png" alt="a woman posing stylishly looking up">
+                        </div>
+                        <h5>Munirat Yusuf</h5>
+                        <small>lawyer</small>
+                        <p>
+                            “I am a technical writer with barely any knowledge of what
+                            terms and conditions should look like, Using this
+                            site has been the best decision for me, my clients
+                            and my business”
+                        </p>
+                        <p class="rating"><img src="./images/star.svg" alt="an icon of a star"> 5.0</p>
+                    </div>
+
+                    <div class="testimony-card">
+                        <div class="testimony-avatar">
+                            <img src="./images/avatar-2.png" alt="a woman smiling">
+                        </div>
+                        <h5>Ashley Cole</h5>
+                        <small>lawyer</small>
+                        <p>
+                            “I am a technical writer with barely any knowledge of what
+                            terms and conditions should look like, Using this
+                            site has been the best decision for me, my clients
+                            and my business”
+                        </p>
+                        <p class="rating"><img src="./images/star.svg" alt="an icon of a star"> 5.0</p>
+                    </div>
+
+                    <div class="testimony-card">
+                        <div class="testimony-avatar">
+                            <img src="./images/avatar-3.png" alt="a man smiling">
+                        </div>
+                        <h5>Lamar Junior</h5>
+                        <small>lawyer</small>
+                        <p>
+                            “I am a technical writer with barely any knowledge of what
+                            terms and conditions should look like, Using this
+                            site has been the best decision for me, my clients
+                            and my business”
+                        </p>
+                        <p class="rating"><img src="./images/star.svg" alt="an icon of a star"> 5.0</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="container faqs">
+                <h3>Frequently Asked Questions</h3>
+                <div class="faq-wrapper">
+                    <div class="faq">
+                        <button class="faq-btn">Why do companies need a privacy policy? <img
+                                src="./images/arrow-down.svg" alt="a down arrow icon"></button>
+                        <p>Companies need a privacy policy because most countries have laws requiring privacy policies
+                            for websites and applications that gather personal data from users; businesses have them.
+                        </p>
+                    </div>
+
+                    <div class="faq">
+                        <button class="faq-btn">What should my privacy policy say? <img src="./images/arrow-down.svg"
+                                alt="a down arrow icon"></button>
+                        <p>Companies need a privacy policy because most countries have laws requiring privacy policies
+                            for websites and applications that gather personal data from users; businesses have them.
+                        </p>
+                    </div>
+
+                    <div class="faq">
+                        <button class="faq-btn">What are the requirements to get my Policies? <img
+                                src="./images/arrow-down.svg" alt="a down arrow icon"></button>
+                        <p>Companies need a privacy policy because most countries have laws requiring privacy policies
+                            for websites and applications that gather personal data from users; businesses have them.
+                        </p>
+                    </div>
+
+                    <div class="faq">
+                        <button class="faq-btn">Can I download the document created by the Terms and Conditions
+                            Generator? <img src="./images/arrow-down.svg" alt="a down arrow icon"></button>
+                        <p>Companies need a privacy policy because most countries have laws requiring privacy policies
+                            for websites and applications that gather personal data from users; businesses have them.
+                        </p>
+                    </div>
+
+                    <div class="faq">
+                        <button class="faq-btn">What are the Terms and Conditions Agreement? <img
+                                src="./images/arrow-down.svg" alt="a down arrow icon"></button>
+                        <p>Companies need a privacy policy because most countries have laws requiring privacy policies
+                            for websites and applications that gather personal data from users; businesses have them.
+                        </p>
+                    </div>
+
+                    <div class="faq">
+                        <button class="faq-btn">Where should I place my Terms and Conditions agreement? <img
+                                src="./images/arrow-down.svg" alt="a down arrow icon"></button>
+                        <p>Companies need a privacy policy because most countries have laws requiring privacy policies
+                            for websites and applications that gather personal data from users; businesses have them.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="teal start">
+            <div class="container">
+                <h3>Start your journey today</h3>
+                <p>Our dashboard is waiting for you to generate your T&C and Privacy Policy documents</p>
+                <div class="auth-links">
+                    <a href="./Login/login.html">sign in</a>
+                    <a href="./Signup/signup.html">get started</a>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="container">
+                <h3>Newsletter</h3>
+                <div class="column-wrapper newsletter">
+                    <div class="newsletter-img">
+                        <img src="./images/newsletter.svg" alt="a newsletter image">
+                    </div>
+                    <div class="newsletter-form">
+                        <p>
+                            Subscribe to our newsletter to get important and industry leading updates to keep your T&Cs
+                            and Privacy Policy documents up to date
+                        </p>
+                        <form>
+                            <img src="./Signup/input-email.svg" alt="icon of a padlock">
+                            <div><input type="email" name="email" id="email" placeholder="johndoe@gmail.com"></div>
+                            <div><button type="submit">Subscribe</button></div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <footer class="teal">
+            <div class="container">
+                <div class="footer-links">
+                    <div>
+                        <ul>
+                            <li>
+                                <a href="index.html">
+                                    <img src="./images/logo-white.svg" alt="TermBuddy logo">
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="./images/linkedin.svg" alt="linkedin logo">
+                                </a>
+                                <a href="">
+                                    <img src="./images/facebook.svg" alt="facebook logo">
+                                </a>
+                                <a href="">
+                                    <img src="./images/instagram.svg" alt="instagram logo">
+                                </a>
+                                <a href="">
+                                    <img src="./images/twitter.svg" alt="twitter logo">
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div>
+                        <ul>
+                            <li>
+                                <h5>Company</h5>
+                            </li>
+                            <li><a href="">about us</a></li>
+                            <li><a href="">contact us</a></li>
+                        </ul>
+                    </div>
+
+                    <div>
+                        <ul>
+                            <li>
+                                <h5>Product</h5>
+                            </li>
+                            <li><a href="">Privacy Policy Templates</a></li>
+                            <li><a href="">T&Cs generator</a></li>
+                        </ul>
+                    </div>
+
+                    <div>
+                        <ul>
+                            <li>
+                                <h5>Resources</h5>
+                            </li>
+                            <li><a href="">templates</a></li>
+                            <li><a href="">docs</a></li>
+                        </ul>
+                    </div>
+
+                    <div>
+                        <ul>
+                            <li>
+                                <h5>Developers</h5>
+                            </li>
+                            <li><a href="">forum</a></li>
+                            <li><a href="">projects</a></li>
+                            <li><a href="">partnerships</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="column-wrapper terms">
+                    <p><small>&copy; 2022 Termbuddy Services. All Rights Reserved</small></p>
+                    <div class="terms-links">
+                        <a href=""><small>Privacy Policy</small></a>
+                        <a href=""><small>Terms & Conditions</small></a>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </main>
+
+    <script>
+        document.querySelectorAll('.faq-btn').forEach(faq => faq.addEventListener('click', (e) => {
+            e.target.parentElement.classList.toggle('open')
+        }))
+    </script>
 </body>
 
 </html>
