--- a/Signup/signup.html
+++ b/Signup/signup.html
@@ -19,8 +19,8 @@
         <div class="container">
             <div class="flex">
                 <div class="logo">
-                    <a href="index.html">
-                        <img src="images/logo.png" alt="Logo">
+                    <a href="../index.html">
+                        <img src="../images/logo.svg" alt="Logo">
                     </a>
                 </div>
                 <div>
@@ -39,33 +39,64 @@
                     <div class="form-text">
                         <h2>Sign Up</h2>
                     </div>
-                    <form action="">
+                    <form action="" id="form">
                         <div>
                             <label for="firstname">First Name
                                 <img class="input-icon" src="input-user.svg" alt="an icon of an user">
                             </label>
-                            <input type="text" name="firstname" id="firstname" placeholder="John">
+                            <input type="text" name="first_name" id="firstname" placeholder="John" class="hide-error">
+                            <p class="error-message">
+                                <span class="error-icon">
+                                    <img src="../x-icon.svg" alt="an x icon">
+                                </span>
+                                <span class="error-text">
+                                    First name cannot be blank
+                                </span>
+                            </p>
                         </div>
                         <div>
                             <label for="lastname">Last Name
                                 <img class="input-icon" src="input-user.svg" alt="an icon of a user">
                             </label>
-                            <input type="text" name="lastname" id="lastname" placeholder="Doe">
+                            <input type="text" name="last_name" id="lastname" placeholder="Doe" class="hide-error">
+                            <p class="error-message">
+                                <span class="error-icon">
+                                    <img src="../x-icon.svg" alt="an x icon">
+                                </span>
+                                <span class="error-text">
+                                    Last name cannot be blank
+                                </span>
+                            </p>
                         </div>
                         <div>
                             <label for="email">Email
                                 <img class="input-icon" src="../input-email.svg" alt="an icon of an envelop">
                             </label>
-                            <input type="email" name="email" id="email" placeholder="johndoe@gmail.com">
+                            <input type="email" name="email" id="email" placeholder="johndoe@gmail.com" class="hide-error">
+                            <p class="error-message">
+                                <span class="error-icon">
+                                    <img src="../x-icon.svg" alt="an x icon">
+                                </span>
+                                <span class="error-text">
+                                    Email cannot be blank
+                                </span>
+                            </p>
                         </div>
                         <div>
                             <label for="password">Password
                                 <img class="input-icon" src="../Reset/input-security.svg" alt="an icon of a padlock">
-                                <img class="input-icon eye-off" src="../Reset/eye-off.svg"
-                                    alt="an icon of an eye with a slash on it">
-                                <img class="input-icon eye" src="../Reset/eye.svg" alt="an icon of an eye with a slash on it">
+                                <img class="input-icon eye-off eye-icon" src="../Reset/eye-off.svg"
+                                    alt="an icon of an eye">
                             </label>
-                            <input type="password" name="password" id="password" placeholder="*******">
+                            <input type="password" name="password" id="password" placeholder="*******" class="hide-error">
+                            <p class="error-message">
+                                <span class="error-icon">
+                                    <img src="../x-icon.svg" alt="an x icon">
+                                </span>
+                                <span class="error-text">
+                                    Password cannot be blank
+                                </span>
+                            </p>
                         </div>
                         <div class="terms">
                             <input type="checkbox" name="terms" id="terms">
@@ -83,6 +114,8 @@
             </div>
         </section>
     </main>
+
+    <script src="signup.js"></script>
 </body>
 
 </html>
