--- a/forgot.html
+++ b/forgot.html
@@ -18,7 +18,7 @@
             <div class="flex">
                 <div class="logo">
                     <a href="index.html">
-                        <img src="images/logo.png" alt="Logo">
+                        <img src="./images/logo.svg" alt="Logo">
                     </a>
                 </div>
                 <div></div>
@@ -42,6 +42,14 @@
                             <img class="input-email" src="input-email.svg" alt="an icon of an envelop">
                         </label>
                         <input type="email" name="email" id="email" placeholder="johndoe@gmail.com">
+                        <p class="error-message">
+                            <span class="error-icon">
+                                <img src="x-icon.svg" alt="an x icon">
+                            </span>
+                            <span class="error-text">
+                                Provide a valid email address
+                            </span>
+                        </p>
                         <input type="submit" value="Send Link">
                     </form>
                     <a class="login-link" href="./Login/login.html">Back to Login</a>
